[package]
name = "amogus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"

wee_alloc = "0.4.5"

enum-map = "^2.1.0"
image ={ version= "^0.24.1", default-features = false }
console_error_panic_hook = "*"
num = "*"
float-ord = "*"
rand = "*"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console'
]